Fri Oct 29 10:08:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSInvocation.m: ([-initWithTarget:selector:]) possible fix
	for structure arguments grabbed from varargs.

Tue Oct 19 11:28:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSScanner.m: skipToNextField() - cope with a nil set of
	characters to be skipped.

Fri Oct 15 01:28:16 1999  Lyndon Tremblay <humasect@coolmail.com>

	* Source/NSURL.m: (-[scheme]) removed a hopefully accidentally placed
	space character in a call to (-[NSString rangeOfString]).
	
Tue Sep 12 14:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSConnection.m: Removed pointer cross-reference support as it
	provided little performance improvement and was responsible for a few
	bugs I've never been able to track down, and major problems if the maps
	at either end of the link get out of sync (which is unavoidable in some
	rare circumstances).
	* Headers/Foundation/NSConnection.h: Removed cross-reference maps
	* Source/ConnectedCoder.m: Removed pointer cross-reference support
	* Source/NSPortCoder.m: Removed pointer cross-reference support

Fri Sep  8 12:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* configure.in: Correct path to include file for checking thread support
	(bug reported by kai@cats.ms).

Tue Sep  5 11:21:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUserDefaults.m: Fix for crash when reading corrupt file.
	Also -added code to create ~/GNUstep directory if needed.

Mon Sep  4 11:06:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/gdomap.c: better debug output (hopefully)

Wed Sep 29 21:34:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSData.m: More GC updates (atomic data buffer)
	* Source/NSGString.m: ditto
	* Source/NSGCString.m: ditto
	* Source/NSObject.m: More GC updates
	* Source/NSZone.m: ditto
	* Source/mframe.m: ditto
	* Source/objc-gnu2next.m: ditto